--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/orium-portfolio/src/assets/Orium2.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/orium-portfolio/src/index.css" rel="stylesheet">
-    <title>Vite + React</title>
+    <title>Orium</title>
   </head>
   <body>
     <div id="root"></div>
